--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 	</div>
 
 	<div class = "menu">
-		<div class="iconHeader" id="menuIcon">
+		<!--<div class="iconHeader" id="menuIcon">
 			<a><i class="fa fa-bars fa-2x"></i></a>
-		</div>
+		</div>-->
 		<div class="drop-menu" id="menu">
 			<ul id="list">
 				<li><a href="#contactDiv"><h3 id="contact">Contact Us</h3></a></li>
