Update for Mobile Viewing
Working on viewport scaling

--- a/index.html
+++ b/index.html
@@ -18,19 +18,18 @@
 	</div>
 
 	<div class = "menu">
-		<div class="iconHeader" id="menuIcon">
+		<!--<div class="iconHeader" id="menuIcon">
 			<a><i class="fa fa-bars fa-2x"></i></a>
-		</div>
+		</div>-->
 		<div class="drop-menu" id="menu">
 			<ul id="list">
-				<li><a href="#contactDiv"><h3 id="contact">Contact Us</h3></a></li>
-				<li><a href="#regDiv"><h3 id="register">Sign Up</h3></a></li>
-				<li><a href="#cityDiv"><h3 id="urban">Urban Trips</h3></a></li>
-				<li><a href="#wildDiv"><h3 id="wild">Wilderness Trips</h3></a></li>
-				<li><a href="#coastDiv"><h3 id="coastal">Coastal Trips</h3></a></li>
-				<li><a href="#aboutDiv"><h3 id="about">About Us</h3></a></li>
 				<li><a href="#"><h3 id="top">Go To Top</h3></a></li>
-
+				<li><a href="#aboutDiv"><h3 id="about">About Us</h3></a></li>
+				<li><a href="#coastDiv"><h3 id="coastal">Coastal Trips</h3></a></li>
+				<li><a href="#wildDiv"><h3 id="wild">Wilderness Trips</h3></a></li>
+				<li><a href="#cityDiv"><h3 id="urban">Urban Trips</h3></a></li>
+				<li><a href="#regDiv"><h3 id="register">Sign Up</h3></a></li>
+				<li><a href="#contactDiv"><h3 id="contact">Contact Us</h3></a></li>
 			</ul>
 		</div>
 	</div>
