--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <head>
 <title>Freeport Travel Planning</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="animate.js"></script>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
@@ -18,9 +17,9 @@
 	</div>
 
 	<div class = "menu">
-		<!--<div class="iconHeader" id="menuIcon">
-			<a><i class="fa fa-bars fa-2x"></i></a>
-		</div>-->
+		<div class="iconHeader" id="menuIcon">
+			<a><i class="material-icons" style="font-size:55px;">menu</i></a>
+		</div>
 		<div class="drop-menu" id="menu">
 			<ul id="list">
 				<li><a href="#"><h3 id="top">Go To Top</h3></a></li>
@@ -117,7 +116,7 @@
   				<input type="text" name="name" placeholder="John Doe"><br>
   				<h3>Email:</h3><br>
   				<input type="text" name="email" placeholder="myEmail@example.com"><br>
-				<input type="submit" value="Sign Me Up!">
+				<input type="button" value="Sign Me Up!" id="r">
 			</form>
 		</div>
 	</div>
@@ -140,7 +139,7 @@
   				<input type="text" name="email" placeholder="myEmail@example.com"><br>
 				<h3>Message:</h3><br>
 		      <textarea name="message" rows="10" cols="40"></textarea><br>
-				<input type="submit" value="Send Message">
+				<input type="button" value="Send Message">
 			</form>
 		</div>
 	</div>
