--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<script src="animate.js"></script>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
 </head>
 <body>
 
@@ -116,7 +117,7 @@
   				<input type="text" name="name" placeholder="John Doe"><br>
   				<h3>Email:</h3><br>
   				<input type="text" name="email" placeholder="myEmail@example.com"><br>
-				<input type="button" value="Sign Me Up!" id="r">
+				<input type="reset" value="Sign Me Up!" onclick="thanksMessage()">
 			</form>
 		</div>
 	</div>
@@ -139,7 +140,7 @@
   				<input type="text" name="email" placeholder="myEmail@example.com"><br>
 				<h3>Message:</h3><br>
 		      <textarea name="message" rows="10" cols="40"></textarea><br>
-				<input type="button" value="Send Message">
+				<input type="reset" value="Send Message" onclick="thanksMessage()">
 			</form>
 		</div>
 	</div>
