--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="nav">
     <div class="tabs">
       <ul id="navLinks">
-        <li><a href="me.html" id="logo">AVS</a></li>
+        <li><a href="index.html" id="logo">AVS</a></li>
         <li><a href="experience.html"id="noLogo">Experience</a></li>
         <li><a href="examples.html"id="noLogo">My Work</a></li>
         <li><a href="contact.html"id="noLogo">Contact Me</a></li>
