Getting jquery to work

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
   <title>Andrew Van Saun Portfolio</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-  <script src="https://cdn.jsdelivr.net/jquery.typeit/4.3.0/typeit.min.js"></script>
+  <!--<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>  <script src="https://cdn.jsdelivr.net/jquery.typeit/4.3.0/typeit.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Convergence|Montserrat:700|Roboto' rel='stylesheet'>
 </head>
 <body>
