--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="tintLayer">
           <div class="header">
             <div class="logoBox">
-              <img src="images/freeportLogo.png"></img>
+              <img src="./images/freeportLogo.png"></img>
             </div>
             <div class="navContainer">
               <!-- <a href="index.html" id="homeLink">Home</a> -->
@@ -96,7 +96,7 @@
               <div class="ts1">
                 <h2>Yosemite</h2>
                 <div class="tripSquare">
-                  <img src="images/yosemite.jpeg" style="height: 100%"/>
+                  <img src="./images/yosemite.jpeg" style="height: 100%"/>
                 </div>
               </div>
 
