changed image links to proper case

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="tintLayer">
           <div class="header">
             <div class="logoBox">
-              <img src="images/freeportLogo.png"></img>
+              <img src="Images/freeportLogo.png"></img>
             </div>
             <div class="navContainer">
               <!-- <a href="index.html" id="homeLink">Home</a> -->
@@ -22,8 +22,8 @@
               <a href="contact.html" id="contactLink">Contact Us</a> -->
             </div>
             <div class="mobileHeaderBar">
-              <img id="logo" src="images/freeportLogoBlack.png"></img>
-              <a href="javascript:dropdownMenu()"><img src="images/list.png" id="menuIcon"/><br /><p>Menu</p></a>
+              <img id="logo" src="Images/freeportLogoBlack.png"></img>
+              <a href="javascript:dropdownMenu()"><img src="Images/list.png" id="menuIcon"/><br /><p>Menu</p></a>
             </div>
           </div>
 
@@ -96,63 +96,63 @@
               <div class="ts1">
                 <h2>Yosemite</h2>
                 <div class="tripSquare">
-                  <img src="images/yosemite.jpeg" style="height: 100%"/>
+                  <img src="Images/yosemite.jpeg" style="height: 100%"/>
                 </div>
               </div>
 
               <div class="ts2">
                 <h2>Caribbean</h2>
                 <div class="tripSquare">
-                  <img src="images/caribbean.jpeg" style="height: 100%"/>
+                  <img src="Images/caribbean.jpeg" style="height: 100%"/>
                 </div>
               </div>
 
               <div class="ts3">
                 <h2>Toronto</h2>
                 <div class="tripSquare">
-                  <img src="images/toronto.jpeg" style="height: 100%"/>
+                  <img src="Images/toronto.jpeg" style="height: 100%"/>
                 </div>
               </div>
 
               <div class="ts4">
                 <h2>Singapore</h2>
                 <div class="tripSquare">
-                  <img src="images/singapore.jpeg" style="height: 100%"/>
+                  <img src="Images/singapore.jpeg" style="height: 100%"/>
                 </div>
               </div>
 
               <div class="ts5">
                 <h2>Rio de Jainero</h2>
                 <div class="tripSquare">
-                  <img src="images/rio.jpeg" style="height: 100%"/>
+                  <img src="Images/rio.jpeg" style="height: 100%"/>
                 </div>
               </div>
 
               <div class="ts6">
                 <h2>Germany</h2>
                 <div class="tripSquare">
-                  <img src="images/germany.jpeg" style="height: 100%"/>
+                  <img src="Images/germany.jpeg" style="height: 100%"/>
                 </div>
               </div>
 
               <div class="ts7">
                 <h2>Venice</h2>
                 <div class="tripSquare">
-                  <img src="images/venice.jpeg" style="height: 100%"/>
+                  <img src="Images/venice.jpeg" style="height: 100%"/>
                 </div>
               </div>
 
               <div class="ts8">
                 <h2>London</h2>
                 <div class="tripSquare">
-                  <img src="images/london.jpeg" style="height: 100%"/>
+                  <img src="Images/london.jpeg" style="height: 100%"/>
                 </div>
               </div>
 
               <div class="ts9">
                 <h2>Australia</h2>
                 <div class="tripSquare">
-                  <img src="images/australia.jpeg" style="height: 100%"/>
+                  <img src="Images/australia.jpeg" style="height: 100%"/>
                 </div>
               </div>
 
